--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ project(waiterbot)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED actionlib actionlib_msgs kobuki_msgs cafe_msgs ar_track_alvar)
 
 ## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
+find_package(Boost REQUIRED COMPONENTS system)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -48,10 +48,10 @@ find_package(catkin REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES waiterbot
-#  CATKIN_DEPENDS other_catkin_pkg
-#  DEPENDS system_lib
+  INCLUDE_DIRS include
+  LIBRARIES waiterbot
+  CATKIN_DEPENDS actionlib actionlib_msgs kobuki_msgs cafe_msgs ar_track_alvar
+  DEPENDS system_lib
 )
 
 ###########
@@ -60,7 +60,7 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-# include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
 ## Declare a cpp library
 # add_library(waiterbot
@@ -68,16 +68,16 @@ catkin_package(
 # )
 
 ## Declare a cpp executable
-# add_executable(waiterbot_node src/waiterbot_node.cpp)
+add_executable(waiterbot_node src/waiter_node.cpp src/ar_markers.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 # add_dependencies(waiterbot_node waiterbot_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(waiterbot_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(waiterbot_node
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
