--- a/package.xml
+++ b/package.xml
@@ -41,6 +41,17 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>kobuki_msgs</build_depend>
+  <build_depend>cafe_msgs</build_depend>
+  <build_depend>ar_track_alvar</build_depend>
+
+  <run_depend>actionlib</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
+  <run_depend>kobuki_msgs</run_depend>
+  <run_depend>cafe_msgs</run_depend>
+  <run_depend>ar_track_alvar</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
