Still a lot to do....

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(waiterbot)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED actionlib actionlib_msgs kobuki_msgs cafe_msgs ar_track_alvar)
+find_package(catkin REQUIRED actionlib actionlib_msgs  kobuki_msgs cafe_msgs ar_track_alvar) #move_base_msgs
 
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system)
@@ -68,7 +68,7 @@ include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 # )
 
 ## Declare a cpp executable
-add_executable(waiterbot_node src/waiter_node.cpp src/ar_markers.cpp)
+add_executable(waiterbot_node src/waiter_node.cpp src/ar_markers.cpp src/nav_watchdog.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
