--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <build_depend>actionlib_msgs</build_depend>
 <!--   <build_depend>move_base_msgs</build_depend>   catkenized only on hydro-devel -->
   <build_depend>kobuki_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>cafe_msgs</build_depend>
   <build_depend>ar_track_alvar</build_depend>
 
@@ -22,6 +23,7 @@
   <run_depend>actionlib_msgs</run_depend>
 <!--   <run_depend>move_base_msgs</run_depend> -->
   <run_depend>kobuki_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
   <run_depend>cafe_msgs</run_depend>
   <run_depend>ar_track_alvar</run_depend>
 
