--- a/param/move_base/costmap_common_params.yaml
+++ b/param/move_base/costmap_common_params.yaml
@@ -3,8 +3,8 @@ obstacle_range: 2.5
 raytrace_range: 3.0
 robot_radius: 0.18
 inflation_radius: 0.50
-observation_sources: ir_scan 
+observation_sources: kn_scan ir_scan bumpers 
 
 kn_scan: {data_type: LaserScan, topic:    scan, marking: true, clearing: true, min_obstacle_height: 0.25, max_obstacle_height: 0.35}
-ir_scan: {data_type: LaserScan, topic: ir_scan, marking: true, clearing: true, min_obstacle_height: 0.04, max_obstacle_height: 0.16, observation_persistence: 1.0}
-bumpers: {data_type: PointCloud2, topic: mobile_base/sensors/bumper_pointcloud, marking: true, clearing: false, min_obstacle_height: 0.01, max_obstacle_height: 0.10}
+ir_scan: {data_type: LaserScan, topic: ir_scan, marking: true, clearing: true, min_obstacle_height: 0.04, max_obstacle_height: 0.16, observation_persistence: 1.5}
+bumpers: {data_type: PointCloud2, topic: mobile_base/sensors/bumper_pointcloud, marking: true, clearing: false, min_obstacle_height: 0.01, max_obstacle_height: 0.2}
