--- a/param/move_base/move_base_params.yaml
+++ b/param/move_base/move_base_params.yaml
@@ -2,11 +2,12 @@
 #
 #  http://www.ros.org/wiki/move_base
 #
+shutdown_costmaps: false
 
-controller_frequency: 20.0
+controller_frequency: 10.0
 controller_patience: 3.0
 
-planner_frequency: 0.5
+planner_frequency: 1.5
 planner_patience: 5.0
 
 oscillation_timeout: 10.0
