--- a/param/move_base/base_local_planner_params.yaml
+++ b/param/move_base/base_local_planner_params.yaml
@@ -1,18 +1,23 @@
 controller_frequency: 5.0
 TrajectoryPlannerROS:
-  max_vel_x: 0.30
+  max_vel_x: 0.20
   min_vel_x: 0.10
-  max_rotational_vel: 1.5
-  min_in_place_rotational_vel: 1.0
-  acc_lim_th: 0.50
+
+  max_vel_theta:  0.8
+  min_vel_theta: -0.8
+  min_in_place_rotation: 0.3
+  
+  acc_lim_theta: 0.8
   acc_lim_x: 0.30
   acc_lim_y: 0.30
 
   holonomic_robot: false
   yaw_goal_tolerance: 0.3
   xy_goal_tolerance: 0.15
-  goal_distance_bias: 0.8
-  path_distance_bias: 0.6
+  gdist_scale: 0.8
+  pdist_scale: 0.6
+  occdist_scale: 0.05
+
   sim_time: 1.5
   heading_lookahead: 0.325
   oscillation_reset_dist: 0.05
@@ -20,4 +25,3 @@ TrajectoryPlannerROS:
   vx_samples: 6
   vtheta_samples: 20
   dwa: false
-
