--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>cafe_msgs</build_depend>
   <build_depend>ar_track_alvar</build_depend>
+  <build_depend>semantic_region_handler</build_depend>
 
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
@@ -26,6 +27,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>cafe_msgs</run_depend>
   <run_depend>ar_track_alvar</run_depend>
+  <run_depend>semantic_region_handler</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
