--- a/param/move_base/costmap_common_params.yaml
+++ b/param/move_base/costmap_common_params.yaml
@@ -1,10 +1,10 @@
-max_obstacle_height: 0.60  # assume something like an arm is mounted on top of the robot
+max_obstacle_height: 0.80
 obstacle_range: 1.5  # half map side
 raytrace_range: 2.0
-robot_radius: 0.21   # 3 cm more than robot
+robot_radius: 0.18
 inflation_radius: 0.50
 observation_sources: kn_scan ir_scan bumpers 
 
-kn_scan: {data_type: LaserScan, topic:    scan, marking: true, clearing: true, min_obstacle_height: 0.15, max_obstacle_height: 0.45}
-ir_scan: {data_type: LaserScan, topic: ir_scan, marking: true, clearing: true, min_obstacle_height: 0.05, max_obstacle_height: 0.15, observation_persistence: 1.5}
-bumpers: {data_type: PointCloud2, topic: mobile_base/sensors/bumper_pointcloud, marking: true, clearing: false, min_obstacle_height: 0.0, max_obstacle_height: 0.05}
+kn_scan: {data_type: LaserScan, topic:    /scan, marking: true, clearing: true, min_obstacle_height: 0.2, max_obstacle_height: 0.3}
+ir_scan: {data_type: LaserScan, topic:  ir_scan, marking: true, clearing: true, min_obstacle_height: 0.1, max_obstacle_height: 0.2, observation_persistence: 0.2}
+bumpers: {data_type: PointCloud2, topic: /mobile_base/sensors/bumper_pointcloud, marking: true, clearing: false, min_obstacle_height: 0.0, max_obstacle_height: 0.1}
