--- a/param/move_base/global_costmap_params.yaml
+++ b/param/move_base/global_costmap_params.yaml
@@ -5,4 +5,6 @@ global_costmap:
    publish_frequency: 0.1
    static_map: true
    transform_tolerance: 0.5
-   observation_sources: NONE 
+   observation_sources: NONE
+   publish_voxel_map: true 
+   map_type: costmap
