--- a/param/move_base/local_costmap_params.yaml
+++ b/param/move_base/local_costmap_params.yaml
@@ -9,3 +9,9 @@ local_costmap:
    height: 3.0
    resolution: 0.05
    transform_tolerance: 0.5
+   publish_voxel_map: true 
+   
+   origin_z: 0.0
+   z_resolution: 0.1
+   z_voxels: 3
+   
