--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
 ## Declare the executables
 add_executable(ir_scan_node src/ir_scan_node.cpp)
-add_executable(waiterbot_node src/waiter_node.cpp src/ar_markers.cpp src/nav_watchdog.cpp src/navigator.cpp src/common.cpp src/waiter_cbs.cpp src/waiter_tasks.cpp src/waiter_deliveryhandles.cpp)
+add_executable(waiterbot_node src/waiter_node.cpp src/waiter_tasks.cpp src/waiter_delivery_handles.cpp src/ar_markers.cpp src/nav_watchdog.cpp src/navigator.cpp src/common.cpp src/waiter_callbacks.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
