--- a/param/vel_smoother.yaml
+++ b/param/vel_smoother.yaml
@@ -12,4 +12,9 @@ accel_lim_w: 1.0
 # Optional parameters
 frequency: 20.0
 decel_factor: 1.0
-robot_feedback: 2  # end robot commands
+
+# Robot velocity feedback type:
+#  0 - none 
+#  1 - odometry
+#  2 - end robot commands
+robot_feedback: 2
