--- a/param/move_base/costmap_common_params.yaml
+++ b/param/move_base/costmap_common_params.yaml
@@ -4,6 +4,7 @@ raytrace_range: 2.0
 robot_radius: 0.18
 inflation_radius: 0.50
 observation_sources: kn_scan ir_scan bumpers 
+publish_cost_grid_pc: true
 
 kn_scan: {data_type: LaserScan, topic:    /scan, marking: true, clearing: true, min_obstacle_height: 0.2, max_obstacle_height: 0.3}
 ir_scan: {data_type: LaserScan, topic:  ir_scan, marking: true, clearing: true, min_obstacle_height: 0.1, max_obstacle_height: 0.2, observation_persistence: 0.2}
