--- a/param/move_base/base_local_planner_params.yaml
+++ b/param/move_base/base_local_planner_params.yaml
@@ -11,28 +11,28 @@ TrajectoryPlannerROS:
   acc_lim_x: 0.2
   acc_lim_theta: 1.0
 
-  holonomic_robot: false
-
 # Goal Tolerance Parameters
   yaw_goal_tolerance: 0.3
   xy_goal_tolerance: 0.15
 
 # Forward Simulation Parameters
-  sim_time: 1.0
+  sim_time: 3.0
   vx_samples: 3
   vtheta_samples: 20
 
 # Trajectory Scoring Parameters
-  pdist_scale: 0.9
+  meter_scoring: true
+  pdist_scale: 1.2
   gdist_scale: 0.8
   occdist_scale: 0.01
   heading_lookahead: 0.325
-  dwa: false
+  dwa: true
 
 # Oscillation Prevention Parameters
   oscillation_reset_dist: 0.05
 
 # Differential-drive robot configuration
+  holonomic_robot: false
   max_vel_y: 0.0
   min_vel_y: 0.0
   acc_lim_y: 0.0
