--- a/package.xml
+++ b/package.xml
@@ -19,7 +19,8 @@
   <build_depend>cafe_msgs</build_depend>
   <build_depend>ar_track_alvar</build_depend>
   <build_depend>semantic_region_handler</build_depend>
-
+  <build_depend>pcl_ros</build_depend>
+  
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>move_base_msgs</run_depend>
@@ -28,7 +29,8 @@
   <run_depend>cafe_msgs</run_depend>
   <run_depend>ar_track_alvar</run_depend>
   <run_depend>semantic_region_handler</run_depend>
-
+  <run_depend>pcl_ros</run_depend>
+  
   <run_depend>rosserial_python</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
