--- a/param/move_base/costmap_common_params.yaml
+++ b/param/move_base/costmap_common_params.yaml
@@ -3,8 +3,12 @@ obstacle_range: 2.0  # half map side
 raytrace_range: 2.5
 robot_radius: 0.2  # real 0.18
 inflation_radius: 0.40
-observation_sources: kn_scan ir_scan bumpers 
+observation_sources: kn_scan ir_scan bumpers virtual
 
 kn_scan: {data_type: LaserScan, topic:    /scan, marking: true, clearing: true, min_obstacle_height: 0.2, max_obstacle_height: 0.3}
 ir_scan: {data_type: LaserScan, topic:  ir_scan, marking: true, clearing: true, min_obstacle_height: 0.1, max_obstacle_height: 0.2}
 bumpers: {data_type: PointCloud2, topic: /mobile_base/sensors/bumper_pointcloud, marking: true, clearing: false, min_obstacle_height: 0.0, max_obstacle_height: 0.1}
+
+
+virtual: {data_type: PointCloud2, topic: virtual_sensor_pointcloud, marking: true, clearing: true}#, observation_persistence: 10.0}
+#virtual: {data_type: PointCloud2, topic: /mobile_base/sensors/bumper_pointcloud, sensor_frame: /map, marking: true, clearing: false, observation_persistence: 10.0}
