--- a/param/move_base/global_costmap_params.yaml
+++ b/param/move_base/global_costmap_params.yaml
@@ -1,9 +1,13 @@
 global_costmap:
    global_frame: /map
    robot_base_frame: /base_footprint
-   update_frequency: 0.5
-   publish_frequency: 0.1
+   update_frequency: 1.0
+   publish_frequency: 0.5
    static_map: true
    transform_tolerance: 0.5
-   observation_sources: NONE
-   map_type: costmap
+#   observation_sources: NONE
+#   map_type: costmap
+
+   origin_z: 0.0
+   z_resolution: 0.1
+   z_voxels: 4
