--- a/package.xml
+++ b/package.xml
@@ -19,7 +19,8 @@
   <build_depend>cafe_msgs</build_depend>
   <build_depend>ar_track_alvar</build_depend>
   <build_depend>semantic_region_handler</build_depend>
-  <build_depend>pcl_ros</build_depend>
+  <build_depend>arduino_interface</build_depend>
+  <build_depend>bma180_driver</build_depend>
   
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
@@ -29,7 +30,8 @@
   <run_depend>cafe_msgs</run_depend>
   <run_depend>ar_track_alvar</run_depend>
   <run_depend>semantic_region_handler</run_depend>
-  <run_depend>pcl_ros</run_depend>
+  <run_depend>arduino_interface</run_depend>
+  <run_depend>bma180_driver</run_depend>
   
   <run_depend>rosserial_python</run_depend>
 
