--- a/waiterbot/CMakeLists.txt
+++ b/waiterbot/CMakeLists.txt
@@ -4,7 +4,7 @@ project(waiterbot)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED actionlib actionlib_msgs  kobuki_msgs sensor_msgs cafe_msgs ar_track_alvar move_base_msgs arduino_interface bma180_driver)
+find_package(catkin REQUIRED actionlib actionlib_msgs  kobuki_msgs sensor_msgs cafe_msgs ar_track_alvar move_base_msgs)
 
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system)
@@ -50,7 +50,7 @@ find_package(Boost REQUIRED COMPONENTS system)
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES waiterbot
-  CATKIN_DEPENDS actionlib actionlib_msgs kobuki_msgs cafe_msgs ar_track_alvar move_base_msgs arduino_interface bma180_driver
+  CATKIN_DEPENDS actionlib actionlib_msgs kobuki_msgs cafe_msgs ar_track_alvar move_base_msgs
   DEPENDS system_lib
 )
 
@@ -69,7 +69,6 @@ include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
 ## Declare the executables
 add_executable(ir_scan_node src/ir_scan_node.cpp)
-add_executable(ir_scan_node2 src/ir_scan_node2.cpp)
 add_executable(virtual_sensor_node src/virtual_sensor_node.cpp)
 add_executable(waiterbot_node src/waiter_node.cpp src/waiter_tasks.cpp src/waiter_delivery_handles.cpp src/waiter_callbacks.cpp src/ar_markers.cpp src/nav_watchdog.cpp src/navigator.cpp src/common.cpp)
 
@@ -79,9 +78,6 @@ add_executable(waiterbot_node src/waiter_node.cpp src/waiter_tasks.cpp src/waite
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(ir_scan_node
-  ${catkin_LIBRARIES}
-)
-target_link_libraries(ir_scan_node2
   ${catkin_LIBRARIES}
 )
 
