--- a/waiterbot/param/move_base/costmap_common_params.yaml
+++ b/waiterbot/param/move_base/costmap_common_params.yaml
@@ -5,9 +5,11 @@ robot_radius: 0.2  # real 0.18
 inflation_radius: 0.40
 
 # voxel map configuration; z-voxels 0, 1, 2 and 4 are filled respectivelly by bumpers, ir_scan, kn_scan and vs_scan
+map_type: voxel
 origin_z: 0.0
 z_resolution: 0.1
 z_voxels: 5
+publish_voxel_map: false
 
 observation_sources: kn_scan ir_scan vs_scan bumpers
 
