--- a/waiterbot/package.xml
+++ b/waiterbot/package.xml
@@ -19,6 +19,8 @@
   <build_depend>cafe_msgs</build_depend>
   <build_depend>ar_track_alvar</build_depend>
   <build_depend>semantic_region_handler</build_depend>
+  <build_depend>arduino_interface</build_depend>
+  <build_depend>adc_driver</build_depend>
 
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
@@ -28,6 +30,8 @@
   <run_depend>cafe_msgs</run_depend>
   <run_depend>ar_track_alvar</run_depend>
   <run_depend>semantic_region_handler</run_depend>
+  <run_depend>arduino_interface</run_depend>
+  <run_depend>adc_driver</run_depend>
   
   <run_depend>rosserial_python</run_depend>
 
