--- a/virtual_sensor/CMakeLists.txt
+++ b/virtual_sensor/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(waiterbot)
+project(virtual_sensor)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED tf roscpp actionlib actionlib_msgs  kobuki_msgs sensor_msgs cafe_msgs ar_track_alvar move_base_msgs semantic_region_handler arduino_interface adc_driver)
+find_package(catkin REQUIRED tf roscpp sensor_msgs semantic_region_handler)
 
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system)
@@ -12,7 +12,7 @@ find_package(Boost REQUIRED COMPONENTS system)
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
-## See http://ros.org/doc/groovy/api/catkin/html/user_guide/setup_dot_py.html
+## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
 # catkin_python_setup()
 
 #######################################
@@ -49,8 +49,8 @@ find_package(Boost REQUIRED COMPONENTS system)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES waiterbot
-  CATKIN_DEPENDS tf roscpp actionlib actionlib_msgs kobuki_msgs cafe_msgs ar_track_alvar move_base_msgs semantic_region_handler arduino_interface adc_driver
+  LIBRARIES virtual_sensor
+  CATKIN_DEPENDS tf roscpp sensor_msgs semantic_region_handler
   DEPENDS system_lib
 )
 
@@ -62,42 +62,22 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
-## Declare a cpp library
-# add_library(waiterbot
-#   src/${PROJECT_NAME}/waiterbot.cpp
-# )
-
-## Declare the executables
-add_executable(ir_scan_node src/ir_scan_node.cpp)
-
-add_executable(waiterbot_node src/waiter_node.cpp
-                              src/waiter_tasks.cpp
-                              src/waiter_delivery_handles.cpp
-                              src/waiter_callbacks.cpp
-                              src/ar_markers.cpp
-                              src/nav_watchdog.cpp
-                              src/navigator.cpp
-                              src/common.cpp)
-add_dependencies(waiterbot_node cafe_msgs_gen_cpp semantic_region_handler_gen_cpp ar_track_alvar_gen_cpp)
+## Declare a cpp executable
+add_executable(virtual_sensor_node src/virtual_sensor_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
+add_dependencies(virtual_sensor_node virtual_sensor_gen_cpp semantic_region_handler_gen_cpp)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(ir_scan_node
-  ${catkin_LIBRARIES}
-)
-
-target_link_libraries(waiterbot_node
-  ${catkin_LIBRARIES}
-)
+target_link_libraries(virtual_sensor_node ${catkin_LIBRARIES})
 
 #############
 ## Install ##
 #############
 
 # all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/groovy/api/catkin/html/adv_user_guide/variables.html
+# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
@@ -107,7 +87,7 @@ target_link_libraries(waiterbot_node
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS waiterbot waiterbot_node
+# install(TARGETS virtual_sensor virtual_sensor_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -132,7 +112,7 @@ target_link_libraries(waiterbot_node
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_waiterbot.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_virtual_sensor.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
