--- a/virtual_sensor/package.xml
+++ b/virtual_sensor/package.xml
@@ -13,12 +13,16 @@
 
   <build_depend>tf</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>semantic_region_handler</build_depend>
 
   <run_depend>tf</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
   <run_depend>semantic_region_handler</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
