--- a/virtual_sensor/.project
+++ b/virtual_sensor/.project
@@ -3,6 +3,7 @@
 	<name>virtual_sensor</name>
 	<comment></comment>
 	<projects>
+		<project>math_toolkit</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
