--- a/virtual_sensor/package.xml
+++ b/virtual_sensor/package.xml
@@ -17,6 +17,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>semantic_region_handler</build_depend>
+  <build_depend>math_toolkit</build_depend>
 
   <run_depend>tf</run_depend>
   <run_depend>roscpp</run_depend>
@@ -24,6 +25,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>semantic_region_handler</run_depend>
+  <run_depend>math_toolkit</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
