--- a/waiterbot/param/move_base/move_base_params.yaml
+++ b/waiterbot/param/move_base/move_base_params.yaml
@@ -12,3 +12,21 @@ planner_patience: 5.0
 
 oscillation_timeout: 10.0
 oscillation_distance: 0.2
+
+# Waiterbot recovery behaviors; we avoid spinning, but we need a fall-back replanning
+recovery_behaviors:
+  - name: 'super_conservative_reset'
+    type: 'clear_costmap_recovery/ClearCostmapRecovery'
+  - name: 'conservative_reset'
+    type: 'clear_costmap_recovery/ClearCostmapRecovery'
+  - name: 'aggressive_reset'
+    type: 'clear_costmap_recovery/ClearCostmapRecovery'
+
+super_conservative_reset:
+  reset_distance: 3.0
+
+conservative_reset:
+  reset_distance: 1.5
+
+aggressive_reset:
+  reset_distance: 0.5
