--- a/waiterbot/package.xml
+++ b/waiterbot/package.xml
@@ -6,7 +6,8 @@
 
   <maintainer email="jorge@yujinrobot.com">Jorge Santos</maintainer>
   <license>BSD</license>
-  <!-- <url type="website">http://ros.org/wiki/waiterbot</url> -->
+  <url type="repository">https://github.com/yujinrobot/kobuki-x/tree/hydro-devel/waiterbot</url>
+  <url type="bugtracker">https://github.com/yujinrobot/kobuki-x/issues</url>
   <author email="jorge@yujinrobot.com">Jorge Santos</author> 
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -38,14 +39,13 @@
   <run_depend>arduino_interface</run_depend>
   <run_depend>adc_driver</run_depend>
   <run_depend>yocs_math_toolkit</run_depend>
+
+  <run_depend>stage_ros</run_depend>
+  <run_depend>navigation</run_depend>
+  <run_depend>turtlebot_bringup</run_depend>
+  <run_depend>turtlebot_dashboard</run_depend>
   <run_depend>yocs_virtual_sensor</run_depend>
   
-  <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- You can specify that this package is a metapackage here: -->
-    <!-- <metapackage/> -->
-
-    <!-- Other tools can request additional information be placed here -->
-
   </export>
 </package>
