--- a/waiterbot/package.xml
+++ b/waiterbot/package.xml
@@ -42,9 +42,12 @@
 
   <run_depend>stage_ros</run_depend>
   <run_depend>navigation</run_depend>
+  <run_depend>kobuki_auto_docking</run_depend>
+  <run_depend>kobuki_safety_controller</run_depend>
   <run_depend>turtlebot_bringup</run_depend>
   <run_depend>turtlebot_dashboard</run_depend>
   <run_depend>yocs_virtual_sensor</run_depend>
+  <run_depend>yocs_velocity_smoother<run_depend>
   
   <export>
   </export>
