--- a/waiterbot/package.xml
+++ b/waiterbot/package.xml
@@ -47,7 +47,7 @@
   <run_depend>turtlebot_bringup</run_depend>
   <run_depend>turtlebot_dashboard</run_depend>
   <run_depend>yocs_virtual_sensor</run_depend>
-  <run_depend>yocs_velocity_smoother<run_depend>
+  <run_depend>yocs_velocity_smoother</run_depend>
   
   <export>
   </export>
