Remove all dependencies on semantic_region_handler. The messages there have been moved to yocs_msgs and the load scripts and yaml data files to waiterbot

--- a/waiterbot/CMakeLists.txt
+++ b/waiterbot/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 2.8.3)
 project(waiterbot)
 
 ## Find catkin macros and libraries
-find_package(catkin REQUIRED tf roscpp actionlib actionlib_msgs sensor_msgs kobuki_msgs cafe_msgs move_base_msgs
-                             ar_track_alvar semantic_region_handler arduino_interface adc_driver yocs_math_toolkit)
+find_package(catkin REQUIRED tf roscpp actionlib actionlib_msgs sensor_msgs move_base_msgs kobuki_msgs cafe_msgs yocs_msgs
+                             ar_track_alvar arduino_interface adc_driver yocs_math_toolkit)
 
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system)
@@ -14,8 +14,8 @@ find_package(Boost REQUIRED COMPONENTS system)
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES waiterbot
-  CATKIN_DEPENDS tf roscpp actionlib actionlib_msgs sensor_msgs kobuki_msgs cafe_msgs move_base_msgs
-                 ar_track_alvar semantic_region_handler arduino_interface adc_driver yocs_math_toolkit
+  CATKIN_DEPENDS tf roscpp actionlib actionlib_msgs sensor_msgs move_base_msgs kobuki_msgs cafe_msgs yocs_msgs
+                 ar_track_alvar arduino_interface adc_driver yocs_math_toolkit
   DEPENDS Boost
 )
 
@@ -38,7 +38,7 @@ add_executable(waiterbot_node src/waiter_node.cpp
                               src/navigator.cpp)
 
 ## Add cmake target dependencies of the executable/library
-add_dependencies(waiterbot_node kobuki_msgs cafe_msgs_gencpp semantic_region_handler_gencpp ar_track_alvar_gencpp)
+add_dependencies(waiterbot_node kobuki_msgs cafe_msgs_gencpp yocs_msgs_gencpp ar_track_alvar_gencpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(ir_scan_node
