--- a/waiterbot/param/move_base/costmap_common_params.yaml
+++ b/waiterbot/param/move_base/costmap_common_params.yaml
@@ -17,6 +17,6 @@ publish_voxel_map: true
 observation_sources: kn_scan ir_scan vs_scan bumpers
 
 vs_scan: {data_type: LaserScan, topic: virtual_sensor_scan, marking: true, clearing: true, min_obstacle_height: 0.3, max_obstacle_height: 0.8}
-kn_scan: {data_type: LaserScan, topic:               /scan, marking: true, clearing: true, min_obstacle_height: 0.148, max_obstacle_height: 0.3}
+kn_scan: {data_type: LaserScan, topic:                scan, marking: true, clearing: true, min_obstacle_height: 0.148, max_obstacle_height: 0.3}
 ir_scan: {data_type: LaserScan, topic:             ir_scan, marking: true, clearing: true, min_obstacle_height: 0.1, max_obstacle_height: 0.2}
 bumpers: {data_type: PointCloud2, topic: /mobile_base/sensors/bumper_pointcloud, marking: true, clearing: true, min_obstacle_height: 0.0, max_obstacle_height: 0.1}
