--- a/waiterbot_suite/waiterbot_ctrl_nowireless/package.xml
+++ b/waiterbot_suite/waiterbot_ctrl_nowireless/package.xml
@@ -18,7 +18,13 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>waiterbot_bringup</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>waiterbot_msgs</build_depend>
+  <build_depend>kobuki_msgs</build_depend>
+  <build_depend>yocs_msgs</build_depend>
   <run_depend>waiterbot_bringup</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>waiterbot_msgs</run_depend>
+  <run_depend>kobuki_msgs</run_depend>
+  <run_depend>yocs_msgs</run_depend>
 
 </package>
