--- a/waiterbot_suite/waiterbot_ctrl_nowireless/package.xml
+++ b/waiterbot_suite/waiterbot_ctrl_nowireless/package.xml
@@ -22,11 +22,13 @@
   <build_depend>kobuki_msgs</build_depend>
   <build_depend>yocs_msgs</build_depend>
   <build_depend>yocs_math_toolkit</build_depend>
+  <build_depend>tf</build_depend>
   <run_depend>waiterbot_bringup</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>waiterbot_msgs</run_depend>
   <run_depend>kobuki_msgs</run_depend>
   <run_depend>yocs_msgs</run_depend>
   <run_depend>yocs_math_toolkit</run_depend>
+  <run_depend>tf</run_depend>
 
 </package>
