--- a/waiterbot_suite/waiterbot_sensors/package.xml
+++ b/waiterbot_suite/waiterbot_sensors/package.xml
@@ -12,12 +12,16 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>adc_driver</build_depend>
+  <build_depend>ar_track_alvar</build_depend>
   <build_depend>arduino_interface</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>yocs_math_toolkit</build_depend>
   <run_depend>adc_driver</run_depend>
+  <run_depend>ar_track_alvar</run_depend>
   <run_depend>arduino_interface</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>yocs_math_toolkit</run_depend>
 
 </package>
