--- a/waiterbot_suite/waiterbot_ctrl_nowireless/package.xml
+++ b/waiterbot_suite/waiterbot_ctrl_nowireless/package.xml
@@ -17,13 +17,14 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>waiterbot_bringup</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>waiterbot_msgs</build_depend>
   <build_depend>kobuki_msgs</build_depend>
-  <build_depend>yocs_msgs</build_depend>
-  <build_depend>yocs_math_toolkit</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>waiterbot_bringup</build_depend>
+  <build_depend>waiterbot_msgs</build_depend>
+  <build_depend>yocs_math_toolkit</build_depend>
+  <build_depend>yocs_msgs</build_depend>
 
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>geometry_msgs</run_depend>
