--- a/waiterbot_suite/waiterbot_ar_marker_tracking/CMakeLists.txt
+++ b/waiterbot_suite/waiterbot_ar_marker_tracking/CMakeLists.txt
@@ -1,9 +1,14 @@
+##############################################################################
+# CMake
+##############################################################################
+
 cmake_minimum_required(VERSION 2.8.3)
 project(waiterbot_ar_marker_tracking)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
+##############################################################################
+# Find
+##############################################################################
+
 find_package(catkin REQUIRED COMPONENTS
   ar_track_alvar
   roscpp
@@ -16,9 +21,10 @@ find_package(Boost REQUIRED COMPONENTS system)
 find_package(PkgConfig)
 pkg_search_module(REQUIRED yaml_cpp)
 
-###################################
-## catkin specific configuration ##
-###################################
+##############################################################################
+# Catkin
+##############################################################################
+
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES waiterbot_ar_marker_tracking
@@ -26,13 +32,16 @@ catkin_package(
   DEPENDS Boost yaml-cpp
 )
 
+##############################################################################
+# Build
+##############################################################################
+
 include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${yaml-cpp_INCLUDE_DIRS})
 
 add_subdirectory(src)
 
-
-#############
-## Install ##
-#############
+##############################################################################
+# Install
+##############################################################################
 
 # TODO
