--- a/waiterbot_suite/waiterbot_ar_pair_tracking/package.xml
+++ b/waiterbot_suite/waiterbot_ar_pair_tracking/package.xml
@@ -13,12 +13,14 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>yocs_math_toolkit</build_depend>
   <build_depend>ar_track_alvar</build_depend>
   <build_depend>waiterbot_ar_marker_tracking</build_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>yocs_math_toolkit</run_depend>
