rename projects properly.

--- a/waiterbot_suite/waiterbot_ar_pair_tracking/.project
+++ b/waiterbot_suite/waiterbot_ar_pair_tracking/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>waiterbot_sensors</name>
+	<name>waiterbot_ar_pair_tracking</name>
 	<comment></comment>
 	<projects>
 	</projects>
